# mkdocs-file-filter-plugin

./: .editorconfig  .file-filter.yml  .flake8  .gitattributes  .gitignore  .markdownlint.json  .mkdocsignore  .pre-commit-config.yaml  MANIFEST.in  README.md  build.ps1  build.sh  dev.build.sh  dev.ps1  dev.sh  mkdocs.base.yml  mkdocs.file-filter.yml  mkdocs.files-filter.yaml  mkdocs.files-filter.yml  mkdocs.plugins.yml  mkdocs.test.yml  mkdocs.yml  playground.py  pyproject.toml  requirements.txt  schema-config.json  schema-file-filter-config.json  schema.json  setup.py  text.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml  question.md  question.yml  template.bug.yml  template.feature_request.yml  template.question.yml
.github/linters/: .markdownlint.json
.github/workflows/: ci.yml  dependency-review.yml  linter.yml  release-draft.yml  release-publish.yml  workflow.ci.yml  workflow.pr.yml  workflow.release.draft.yml  workflow.release.yml
docs/: .pages  NAV.md  README.md  draft-aaa.md  draft-docs.md
docs/_drafts/: draft-foobar.md
docs/aaa/: README.md  draft-aaa.md  xyz.md
docs/aaa/bbb/: .pages  README.md  draft-bbb.md
docs/test/: .pages  xyz.md
docs/test1/: .pages  README.md  foo.md  test.md
docs/test1/_drafts/: draft-foo.md
docs/test2/: README.md
docs/test2/_drafts/: README.md
mkdocs_file_filter/: judger.py  plugin.py  util.py  yamlconfig.py
mkdocs_file_filter_plugin/: __about__.py  __init__.py  external_config.py  judger.py  logger.py  plugin.py  plugin_config.py  util.py  yamlconfig.py
mkdocs_files_filter/: __init__.py  judger.py  plugin.py  util.py
mkdocs_filesfilter/: plugin.py
tests/: __init__.py  test_external_config.py  test_external_config_valid.yml
tests/fixtures/: .file-filter.yml  .mkdocsignore  mkdocs.base.yml  mkdocs.plugins.yml  mkdocs.yml  test_external_config_valid.yml
tests/fixtures/docs/: .pages  README.md
tests/fixtures/docs/test1/: .pages  bar.md
tests/fixtures/docs/test1/_drafts/: .pages  draft-bar.md  draft-foo.md
tests/fixtures/docs/test2/: .pages
tests/fixtures/docs/test2/_drafts/: draft-bar.md  draft-foo.md
tests/fixtures/docs/test2/previews/: preview-bar.md  preview-foo.md
